update css and js logic

--- a/components/gallery.html
+++ b/components/gallery.html
@@ -14,16 +14,16 @@
             <img src="../assetss/imgs/pwc.jpeg" class ="slide" alt="This is project">
             <img src="../assetss/imgs/pwc2.jpeg"  class ="slide" alt="This is project">
             <img src="../assetss/imgs/pwc3.jpeg"  class ="slide" alt="This is project">
-            <button class="slide-show" onclick="slideShow()">Slide show</button>
+            <button class="btn" onclick="switchSlideShow()">Slide show</button>
         </div>
 
         <div class="img-info">
-            <button class="Previous" onclick="goPre()">Previous</button>
+            <button class="btn" onclick="goPre()">Previous</button>
                 <div class="img-count">
                     <label class="current-number">1</label>
                     <label class="all-count">/ 6</label>
                 </div>
-            <button class="Next" onclick="goNext()">Next</button>
+            <button class="btn" onclick="goNextBtn()">Next</button>
         </div>
 
         <script src="../js/gallery.js"></script>
