--- a/styles/gallery.css
+++ b/styles/gallery.css
@@ -11,9 +11,10 @@ body {
     box-shadow: 0px 0px 3px gray;
     position: relative;
     overflow: hidden;
+    border-radius: 16px;
 }
 
-.slider .slide-show {
+.slider .btn {
     position: absolute;
     right: 16px;
     top: 8px;
@@ -46,4 +47,27 @@ body {
 
 .img-info .all-count {
     color: gray;
+}
+
+.btn {
+    background-color: cadetblue;
+    width: 80px;
+    height: 30px;
+    border: 0px;
+    border-radius: 16px;
+    color: white;
+}
+
+.btn:hover {
+    background-color: rgb(18, 87, 90);
+}
+
+@media (max-width: 768px) {
+    .slider {
+        width: 100%;
+    }
+
+    .img-info {
+        width: 100%;
+    }
 }
