--- a/components/index.html
+++ b/components/index.html
@@ -1,21 +1,27 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title> Sukina Portfolio</title>
-        <link rel="stylesheet" href="../styles/indexStyle.css">
+      <link rel="stylesheet" href="..//styles/indexStyle.css">
+      <script src="..//js/index.js" defer></script>
+      <title>Sukina Portfolio</title>
     </head>
-
     <body>
-        <h1>Sukina Aldaboubi.</h1>
-
-        <nav>
-        <ul class="nav-list">
-            <li class="nav-item"><a href="home.html">Home</a></li>
-            <li class="nav-item"><a href="aboutMe.html">About Me</a></li>
-            <li class="nav-item"><a href="projects.html">Projects</a></li>
-            <li class="nav-item"><a href="contact.html">Contact</a></li>
-            <li class="nav-item"><a href="gallery.html">Gallery</a></li>
-        </ul>
-    </nav>
+      <nav class="navbar">
+        <h1>Sukina Aldaboubi</h1>
+        <a href="#" class="toggle-button">
+          <span class="bar"></span>
+          <span class="bar"></span>
+          <span class="bar"></span>
+        </a>
+        <div class="navbar-links">
+          <ul>
+            <li><a href="home.html">Home</a></li>
+            <li><a href="aboutMe.html">About Me</a></li>
+            <li><a href="projects.html">Projects</a></li>
+            <li><a href="contact.html">Contact</a></li>
+            <li><a href="gallery.html">Gallery</a></li>
+          </ul>
+        </div>
+      </nav>
     </body>
 </html>
