--- a/components/projects.html
+++ b/components/projects.html
@@ -6,32 +6,36 @@
     </head>
 
     <body>
+        <div class="myProjects">
         <h3>These are my projects</h3>
 
-        <ol class="project-list">
+        <div class="project-list">
+        <ol>
             <li>
                 <img src="../assetss/imgs/pwc.jpeg" alt="This is project1">
                 <div class="imgs-container">
-                <h5>This is project one</h5>
-                <p>This is desc desc desc desc desc desc desc desc desc desc desc desc of project one.</p>
+                <h5 class="project-element">This is project one</h5>
+                <p class="project-element">This is desc desc desc desc desc desc desc desc desc desc desc desc of project one.</p>
                 </div>
             </li>
 
             <li>
                 <img src="../assetss/imgs/pwc2.jpeg" alt="This is project2">
                 <div class="imgs-container">
-                <h5>This is project two</h5>
-                <p>This is desc desc desc desc desc desc desc desc desc desc desc desc of project two.</p>
+                <h5 class="project-element">This is project two</h5>
+                <p class="project-element">This is desc desc desc desc desc desc desc desc desc desc desc desc of project two.</p>
                 </div>
             </li>
 
             <li>
                 <img src="../assetss/imgs/pwc3.jpeg" alt="This is project3">
                 <div class="imgs-container">
-                <h5>This is project three</h5>
-                <p>This is desc desc desc desc desc desc desc desc desc desc desc desc of project three.</p>
+                <h5 class="project-element">This is project three</h5>
+                <p class="project-element">This is desc desc desc desc desc desc desc desc desc desc desc desc of project three.</p>
                 </div>
             </li>
         </ol>
+    </div>
+</div>
     </body>
 </html>
