--- a/styles/indexStyle.css
+++ b/styles/indexStyle.css
@@ -1,41 +1,100 @@
 @import url('https://fonts.googleapis.com/css?family=Sofia');
+* {
+  box-sizing: border-box;
+}
 
 body {
-  margin: 32px 32px 32px;
-  background-color: blanchedalmond;
-}
-
-h1 {
-  font-family: "Sofia", sans-serif;
-}
-
-.nav-list {
-  list-style-type: none;
   margin: 0;
   padding: 0;
-  overflow: hidden;
-  background-color: #333333;
 }
 
-.nav-item {
+.navbar {
   display: flex;
-  float: left;
-}
-
-.nav-item a {
-  display: flex;
-  display: block;
+  position: relative;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #333;
   color: white;
-  text-align: center;
-  padding: 16px;
+}
+
+ h1{
+  font-family: "Sofia", sans-serif;
+  font-size: 1.5rem;
+  margin: .5rem;
+}
+
+.navbar-links {
+  height: 100%;
+}
+
+.navbar-links ul {
+  display: flex;
+  margin: 0;
+  padding: 0;
+}
+ 
+.navbar-links li {
+  list-style: none;
+}
+
+.navbar-links li a {
+  display: block;
   text-decoration: none;
+  color: white;
+  padding: 1rem;
 }
 
-.nav-item a:hover {
-  background-color: #111111;
-}  
-
-.nav-item a:active {
-  background-color: #111111;
+.navbar-links li:hover {
+  background-color: #555;
 }
 
+.toggle-button {
+  position: absolute;
+  top: .75rem;
+  right: 1rem;
+  display: none;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 30px;
+  height: 21px;
+}
+
+.toggle-button .bar {
+  height: 3px;
+  width: 100%;
+  background-color: white;
+  border-radius: 10px;
+}
+
+@media (max-width: 800px) {
+  .navbar {
+      flex-direction: column;
+      align-items: flex-start;
+  }
+
+  .toggle-button {
+      display: flex;
+  }
+
+  .navbar-links {
+      display: none;
+      width: 100%;
+  }
+
+  .navbar-links ul {
+      width: 100%;
+      flex-direction: column;
+  }
+
+  .navbar-links ul li {
+      text-align: center;
+  }
+
+  .navbar-links ul li a {
+      padding: .5rem 1rem;
+  }
+
+  .navbar-links.active {
+      display: flex;
+  }
+} 
