--- a/styles/projectsStyle.css
+++ b/styles/projectsStyle.css
@@ -1,38 +1,45 @@
+/* *{
+    box-sizing: border-box;
+} */
+
 body {
-    width: 60rem;
     margin: 32px 32px 32px ;
     background-color: blanchedalmond;
 }
 
-h3 {
-    margin-bottom: 32px;
+.myProjects {
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    justify-content: space-between;
 }
 
 .project-list {
-    width: 70%;
-    list-style-type: none;
+    width: 100%;
 }
 
-.project-list li {
-    padding-bottom: 16px;
+.project-list ol {
+    display: flex;
+    flex-direction: column;
+}
+
+.project-list ol li {
+    list-style: none;
+    display: flex;
+    flex-direction: row;
+    margin-bottom: 16px;
+    
+}
+
+.project-list ol li .imgs-container {
+    margin-left: 16px;
+}
+
+.project-list ol li .imgs-container .project-element {
+    margin: 0.5rem 0.5rem; 
 }
 
 .project-list li img{
     width: 100px;
     height: 100px;
-}
-
-.project-list .imgs-container {
-    float: right;
-}
-
-@media (max-width: 768px) {
-    .project-list .imgs-container {
-        float: none;
-    }
-
-    body {
-        width: 100%;
-        height: 100%;
-    }
 }
